--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <form>
       <input type="text" placeholder="Usuario">
       <input type="password" placeholder="Contraseña">
+      <h3>Bienvenido</h3>
       <button class="login-btn">Iniciar sesión</button>
       <div class="social-btns">
         <button class="facebook-btn">Iniciar sesión con Facebook</button>
